--- a/index.html
+++ b/index.html
@@ -7,3 +7,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
+<body>
+    <div class="container">
+        <h1>Timed Quiz</h1>
+        <div id="quiz">
+            <div id="question"></div>
+            <div id="choices"></div>
+            <button id="next">Next Question</button>
+        </div>
+        <div id="timer">Time Remaining: <span id="time"></span></div>
+        <div id="scoreboard">
+            <h2>High Scores</h2>
+            <ul id="highscores"></ul>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
